compiler/tests/success/tunneling.jazz
export fn test (reg u64 x) -> reg u64 {
  return x;
}
