compiler/tests/fail/register_allocation/x86-64/no_register_bank.jazz
export fn main () -> reg u64 {
  reg u64 res;
  reg int toto;
  toto = 0;
  res = (64u)toto;
  return res;
}
